Monitroing Risk HF: typo fixed

--- a/nicnbk-ui-angular2/src/app/lookup/view/benchmark.lookup.values.component.html
+++ b/nicnbk-ui-angular2/src/app/lookup/view/benchmark.lookup.values.component.html
@@ -147,6 +147,8 @@
                     <th>INDEX</th>
                     <th>CALC. MONTH RETURN</th>
                     <th>YTD</th>
+                    <th>UPDATED</th>
+                    <th>CREATED</th>
                     <!--<th>INDEX</th>-->
                     <!--<th>AVG VALUE</th>-->
                     <!--<th>AVG VALUE YR</th>-->
@@ -160,6 +162,8 @@
                         <td>{{item.indexValue}}</td>
                         <td>{{item.calculatedMonthReturn}}</td>
                         <td>{{item.ytd}}</td>
+                        <td>{{item.updateDate}}</td>
+                        <td>{{item.creationDate}}</td>
                         <!--<td>{{item.averageValue}}</td>-->
                         <!--<td>{{item.averageValueYear}}</td>-->
                         <td>
