--- a/nicnbk-ui-angular2/src/app/lookup/view/stress.test.lookup.values.component.html
+++ b/nicnbk-ui-angular2/src/app/lookup/view/stress.test.lookup.values.component.html
@@ -102,7 +102,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr *ngFor="let item of searchResults?.stressTestValue">
+                <tr *ngFor="let item of searchResults?.stressTests">
                     <td>{{item.date}}</td>
                     <td>{{item?.name}}</td>
                     <td>{{item.value}}</td>
@@ -115,7 +115,6 @@
                 </tr>
                 </tbody>
             </table>
-
             <div class="row pull-right">
                 <ul class="pagination" *ngIf="searchResults?.showPageFrom > 0">
                     <li><a *ngIf="searchResults?.showPageFrom > 1" (click)="search(searchResults.showPageFrom - 1)">&laquo;</a></li>
