--- a/nicnbk-ui-angular2/src/app/corpmeetings/view/corp-meeting-ic-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/corpmeetings/view/corp-meeting-ic-edit.component.html
@@ -107,6 +107,9 @@
                         <hr style="border-top: 1px solid #B5AEAE">
                         <div class="row top-buffer withpadding">
                             <h4>Questions</h4>
+                            <span *ngIf="icMeeting.topics != null && icMeeting.topics.length > 0" (click)="exportMaterials()" class="btn-xs btn-success pull-right" style="cursor: pointer">
+                                <i class="glyphicon glyphicon-download-alt"></i> &nbsp;Export materials ZIP
+                            </span>
                             <table class="table">
                                 <thead>
                                     <tr>
