Added functionality for resetting password using email to send password reset link and temporary token to authorise user is in system. Not working properly at the moment.

--- a/nicnbk-ui-angular2/src/app/authentication/view/login.component.html
+++ b/nicnbk-ui-angular2/src/app/authentication/view/login.component.html
@@ -27,6 +27,7 @@
                 </div>
                 <div>*leave blank if you haven't enabled MFA</div>
                 <div><button type="submit" class="btn btn-def btn-block" style="width: 300px">Sign In</button></div>
+                <div><a [routerLink]="['/requestReset']">Forgot password</a></div>
             </form>
             <br/>
             <!--<div class="copyrightText">&copy; 2016 NIC</div>-->
