Fixed functionality for token verification when following reset password link from email. To do functionality for changing the password and some polishing.

--- a/nicnbk-ui-angular2/src/app/authentication/view/password.reset.confirm.component.html
+++ b/nicnbk-ui-angular2/src/app/authentication/view/password.reset.confirm.component.html
@@ -1,6 +1,6 @@
 <div class="container" align="center">
     <div class="row">
-        <form (ngSubmit)="resetConfirm()">
+        <form (ngSubmit)="resetConfirm()" *ngIf="isValid">
             <div class="form-group input-group" style="width: 400px">
                 <label class="control-label">New password:</label>
                 <span class="input-group-btn">
@@ -21,6 +21,10 @@
             </div>
             <div><button type="submit" class="btn btn-def btn-block" style="width: 400px">Confirm reset password</button></div>
         </form>
+    </div>
+
+    <div class="row">
+        <h4 *ngIf="!isValid">Failed to verify token or token expired</h4>
     </div>
 </div>
 
