Updated reset password functionality to fully support resetting password both from admin page and forgot password page.

--- a/nicnbk-ui-angular2/src/app/authentication/view/password.reset.component.html
+++ b/nicnbk-ui-angular2/src/app/authentication/view/password.reset.component.html
@@ -9,4 +9,8 @@
             <div><button type="submit" class="btn btn-def btn-block" style="width: 400px">Reset password</button></div>
         </form>
     </div>
+    <div class="row">
+        <h4 *ngIf="isRequested==true">{{successMessageResetPassword}}</h4>
+        <h4 *ngIf="isRequested==false">{{errorMessageResetPassword}}</h4>
+    </div>
 </div>
