--- a/nicnbk-ui-angular2/src/app/authentication/view/password.reset.confirm.component.html
+++ b/nicnbk-ui-angular2/src/app/authentication/view/password.reset.confirm.component.html
@@ -1,30 +1,47 @@
 <div class="container" align="center">
     <div class="row">
-        <form (ngSubmit)="resetConfirm()" *ngIf="isValid">
+        <form (ngSubmit)="resetPassword()" *ngIf="isValid">
             <div class="form-group input-group" style="width: 400px">
                 <label class="control-label">New password:</label>
-                <span class="input-group-btn">
-                    <button class="btn btn-default reveal" type="button" (click)="togglePasswordTextType()"><i class="glyphicon glyphicon-eye-open"></i></button>
-                </span>
                 <input class="form-control" [type]="passwordFieldType ? 'text' : 'password'" name="newPassword"
                        placeholder="Enter new password"
-                       [(ngModel)]="newPassword"/>
+                       [(ngModel)]="userPassword.newPassword"/>
+                <span class="input-group-btn">
+                    <button class="btn btn-default reveal" type="button" style="margin-top: 25px" (click)="togglePasswordTextType()"><i class="glyphicon glyphicon-eye-open"></i></button>
+                </span>
+            </div>
+            <div class="row" *ngIf="passwordNotConfirmed">
+                <p class="text-warning">Passwords do not match</p>
+            </div>
+            <div class="row" *ngIf="passwordNotValid">
+                <p class="text-warning">{{errorNotValidPassword}}</p>
             </div>
             <div class="form-group input-group" style="width: 400px">
-                <label class="control-label">Confirm new password:</label>
-                <span class="input-group-btn">
-                    <button class="btn btn-default reveal" type="button" (click)="toggleConfirmPasswordTextType()"><i class="glyphicon glyphicon-eye-open"></i></button>
-                </span>
+                <label class="control-label">Confirm password:</label>
                 <input class="form-control" [type]="confirmPasswordFieldType ? 'text' : 'password'" name="confirmNewPassword"
                        placeholder="Confirm new password"
                        [(ngModel)]="confirmNewPassword"/>
+                <span class="input-group-btn">
+                    <button class="btn btn-default reveal" type="button" style="margin-top: 25px" (click)="toggleConfirmPasswordTextType()"><i class="glyphicon glyphicon-eye-open"></i></button>
+                </span>
+            </div>
+            <div class="row" *ngIf="passwordNotConfirmed">
+                <p class="text-warning">Passwords do not match</p>
             </div>
             <div><button type="submit" class="btn btn-def btn-block" style="width: 400px">Confirm reset password</button></div>
         </form>
     </div>
 
     <div class="row">
-        <h4 *ngIf="!isValid">Failed to verify token or token expired</h4>
+        <h4 *ngIf="!isValid">This link has expired. Please get a new link or contact administrator</h4>
+    </div>
+
+    <div class="row">
+        <h4 *ngIf="isReset==true">{{successMessageResetPassword}}</h4>
+    </div>
+
+    <div class="row">
+        <h4 *ngIf="!isReset==true">{{errorMessageResetPassword}}</h4>
     </div>
 </div>
 
