Updated reset password to facilitate user entering email without domain name (@nicnbk.kz) and added email validation

--- a/nicnbk-ui-angular2/src/app/authentication/view/password.reset.component.html
+++ b/nicnbk-ui-angular2/src/app/authentication/view/password.reset.component.html
@@ -1,16 +1,23 @@
 <div class="container" align="center">
     <div class="row">
         <form (ngSubmit)="reset()">
-            <div class="form-group input-group" style="width: 400px">
+            <div class="form-group input-group" style="width: 450px">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                <input class="form-control" type="email" name="email" placeholder="Enter your email"
-                       [(ngModel)]="emailAddress"/>
+                <input class="form-control" type="text" name="email" placeholder="Enter your email without domain name"
+                       [(ngModel)]="textInput"/>
+                <span class="input-group-addon" id="email-addon">@nicnbk.kz</span>
             </div>
-            <div><button type="submit" class="btn btn-def btn-block" style="width: 400px">Reset password</button></div>
+            <div class="row" *ngIf="!isValidEmail">
+                <p class="text-warning">{{errorMessageIsValidEmail}}</p>
+            </div>
+            <div><button type="submit" class="btn btn-def btn-block" style="width: 450px">Reset password</button></div>
         </form>
     </div>
     <div class="row">
-        <h4 *ngIf="isRequested==true">{{successMessageResetPassword}}</h4>
-        <h4 *ngIf="isRequested==false">{{errorMessageResetPassword}}</h4>
+
+    </div>
+    <div class="row">
+        <h4 *ngIf="isRequested==true">{{successMessageIsRequested}}</h4>
+        <h4 *ngIf="isRequested==false">{{errorMessageIsRequested}}</h4>
     </div>
 </div>
