Fixed scenario when password reset is allowed when link has been clicked within expiry time, but the process of changing and submitting new password can occur after token expiry time

--- a/nicnbk-ui-angular2/src/app/authentication/view/password.reset.confirm.component.html
+++ b/nicnbk-ui-angular2/src/app/authentication/view/password.reset.confirm.component.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="row">
-        <h4 *ngIf="!isValid">This link has expired. Please get a new link or contact administrator</h4>
+        <h4 *ngIf="!isValid">This link and token has expired. Please get a new link or contact administrator</h4>
     </div>
 
     <div class="row">
