M2S2 export: renamed button

--- a/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
@@ -126,7 +126,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="btn-toolbar pull-right">
-                        <button type="button" class="btn btn-primary" (click)="export()">Export into excel</button>
+                        <button type="button" class="btn btn-primary" (click)="export()">Export xlsx</button>
                     </div>
                 </div>
             </div>
