--- a/nicnbk-ui-angular2/src/app/employee/view/employee.profile.admin.component.html
+++ b/nicnbk-ui-angular2/src/app/employee/view/employee.profile.admin.component.html
@@ -139,7 +139,7 @@
             <div class="col-sm-4">
                 <button class="btn btn-xs btn-default" (click)="generatePassword(8); newPassword = generatedPassword; newPasswordConfirm = generatedPassword">Generate Password</button>
             </div>
-            <div class="col-sm-4" *ngIf="generatedPassword != ''">
+            <div class="col-sm-4" *ngIf="newPassword != ''">
                 <div class="form-check" *ngIf="employee.email != '' && employee.email != null">
                     <input class="form-check-input" type="checkbox" value="" id="sendToEmail" [checked]="emailCheckbox" (change)="emailCheckbox = !emailCheckbox" >
                     <label class="form-check-label" for="sendToEmail">
