1. Password management 2. IC Module: export registry only ic with status CLOSED

--- a/nicnbk-ui-angular2/src/app/admin/view/admin.user-management.component.html
+++ b/nicnbk-ui-angular2/src/app/admin/view/admin.user-management.component.html
@@ -73,7 +73,8 @@
                 <th>FIRSTNAME</th>
                 <th>DEPARTMENT</th>
                 <th>USERNAME</th>
-                <th>DATE OF BIRTH</th>
+                <th>EMAIL</th>
+<!--                <th>DATE OF BIRTH</th>-->
                 <th>SYSTEM STATUS</th>
             </tr>
             </thead>
@@ -81,9 +82,10 @@
             <tr *ngFor="let employee of searchResult?.employees"  style="cursor: pointer" (click)="navigate(employee.username)">
                 <td>{{employee.lastName}}</td>
                 <td>{{employee.firstName}}</td>
-                <td>{{employee.position?.department?.code}}</td>
+                <td>{{employee.position?.department?.shortNameRu}}</td>
                 <td>{{employee.username}}</td>
-                <td>{{getDateMonthTextDay(employee.birthDate)}}</td>
+                <td>{{employee.email}}</td>
+<!--                <td>{{getDateMonthTextDay(employee.birthDate)}}</td>-->
                 <td>
                     <button *ngIf="employee.active == null || employee.active" disabled="true" class="btn btn-xs btn-success">ACTIVE</button>
                     <button *ngIf="employee.active != null && !employee.active" disabled="true" class="btn btn-xs btn-default">IN-ACTIVE</button>
