1.Remove CORP block 2. Legal updates on main page of INVEST block

--- a/nicnbk-ui-angular2/src/app/hr/view/hr-news-list.component.html
+++ b/nicnbk-ui-angular2/src/app/hr/view/hr-news-list.component.html
@@ -50,14 +50,14 @@
     <div [ngBusy]="busy" class="row">
 
         <ul role="tablist" class="date-tabs nav">
-            <li class="date-tabs__item"><a data-toggle="tab"
-                                           href="#NEWS_HR"
-                                           role="tab" aria-controls="NEWS_HR"
-                                           aria-selected="true"
-                                           class="date-tabs__link"
-                                           [style.border-bottom-color]="activeTab === 'NEWS_HR' ? '#D9A158' : 'white'"
-                                           (click)="activeTab = 'NEWS_HR'">NIC NEWS</a>
-            </li>
+<!--            <li class="date-tabs__item"><a data-toggle="tab"-->
+<!--                                           href="#NEWS_HR"-->
+<!--                                           role="tab" aria-controls="NEWS_HR"-->
+<!--                                           aria-selected="true"-->
+<!--                                           class="date-tabs__link"-->
+<!--                                           [style.border-bottom-color]="activeTab === 'NEWS_HR' ? '#D9A158' : 'white'"-->
+<!--                                           (click)="activeTab = 'NEWS_HR'">NIC NEWS</a>-->
+<!--            </li>-->
             <li class="date-tabs__item"><a data-toggle="tab"
                                            href="#LEGAL_UPDATES"
                                            role="tab" aria-controls="LEGAL_UPDATES"
