--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -367,10 +367,10 @@
                                     <a [routerLink]="[getHomePageURLByType('invest')]" class="navigation__link" style="height: 25px; line-height: 25px" (click)="setActiveBlock('invest')"
                                        [style.background-color]="activeBlock === 'invest' ? '#D9A158' : 'white'">INVEST</a>
                                 </li>
-                                <li class="navigation__item">
-                                    <a [routerLink]="[getHomePageURLByType('corp')]" class="navigation__link" style="height: 25px; line-height: 25px" (click)="setActiveBlock('corp')"
-                                       [style.background-color]="activeBlock === 'corp' ? '#D9A158' : 'white'">CORP</a>
-                                </li>
+<!--                                <li class="navigation__item">-->
+<!--                                    <a [routerLink]="[getHomePageURLByType('corp')]" class="navigation__link" style="height: 25px; line-height: 25px" (click)="setActiveBlock('corp')"-->
+<!--                                       [style.background-color]="activeBlock === 'corp' ? '#D9A158' : 'white'">CORP</a>-->
+<!--                                </li>-->
                                 <li class="navigation__item">
                                     <a [routerLink]="[getHomePageURLByType('admin')]" class="navigation__link" style="height: 25px; line-height: 25px" (click)="setActiveBlock('admin')"
                                        [style.background-color]="activeBlock === 'admin' ? '#D9A158' : 'white'" *ngIf="showAdmin()">ADMIN</a>
