1. USD Form 1: line 37 = sum(29036) 2. Tarragon GL: do not sort by tranche 3. Terra GL: editing fund investment

--- a/nicnbk-ui-angular2/src/app/reporting/view/terra.generated.form.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/terra.generated.form.nb.reporting.component.html
@@ -219,12 +219,12 @@
                         <span class="glyphicon glyphicon-pencil"></span>
                     </button>
 
-                    <!--<button *ngIf="record.editable && !record.editing" type="button" class="btn-xs" style="display: inline-block"  (click)="record.editing = true">-->
-                        <!--<span class="glyphicon glyphicon-pencil"></span>-->
-                    <!--</button>-->
-                    <!--<button *ngIf="record.editable && record.editing" type="button" class="btn-xs" style="display: inline-block"  (click)="saveEditAccountBalance(record)">-->
-                        <!--<span class="glyphicon glyphicon-floppy-disk"></span>-->
-                    <!--</button>-->
+                    <button *ngIf="record.editable && !record.editing" type="button" class="btn-xs" style="display: inline-block"  (click)="record.editing = true">
+                        <span class="glyphicon glyphicon-pencil"></span>
+                    </button>
+                    <button *ngIf="record.editable && record.editing" type="button" class="btn-xs" style="display: inline-block"  (click)="saveEditAccountBalance(record)">
+                        <span class="glyphicon glyphicon-floppy-disk"></span>
+                    </button>
                 </td>
             </tr>
 
