--- a/nicnbk-ui-angular2/src/app/employee/view/employee.profile.admin.component.html
+++ b/nicnbk-ui-angular2/src/app/employee/view/employee.profile.admin.component.html
@@ -106,6 +106,19 @@
             </div>
         </div>
         <div class="row form-group">
+            <label class="control-label col-sm-2">Acting as:</label>
+            <div class="col-sm-5">
+                <button *ngIf="isActingAs" class="btn btn-xs btn-success" (click)="toggleIsEmployeeActingAsButton()">ACTING AS</button>
+                <button *ngIf="!isActingAs" class="btn btn-xs btn-default" (click)="toggleIsEmployeeActingAsButton()">NOT-ACTING</button>
+            </div>
+            <div class="col-sm-5" *ngIf="isActingAs == true">
+                <select id="employees" class="form-control" name="employees" [(ngModel)]="chosenSubstitutedEmployee"
+                        (change)="selectedActingEmployee($event.target.value)">
+                    <option *ngFor = "let employee of activeEmployees" [value]="employee?.id">{{employee?.lastName + " " + employee?.firstName}}</option>
+                </select>
+            </div>
+        </div>
+        <div class="row form-group">
             <label class="control-label col-sm-2">Status:</label>
             <div class="col-sm-10">
                 <button *ngIf="employee.active == null || employee.active" class="btn btn-xs btn-success" (click)="employee.active = false">ACTIVE</button>
